--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
-  color-scheme: dark;
+  color-scheme: light;
   
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,6 +23,8 @@
 body {
   margin: 0;
   min-height: 100vh;
+  background: #fafaf9;
+  color: #09090b;
 }
 
 html {
